--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>groupId</groupId>
     <artifactId>CalculatorServlet</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
 
-    
+    </properties>
+
+    <dependencies>
+
+    </dependencies>
 </project>
